public/skin/frontend/rwd/default/css/styles.css
/* ... */
.info-box h2 {
  font-weight: bold;
  font-size: 0.813rem;
}

.info-table th,
.info-table td {
  vertical-align: top;
}

.info-table th {
  font-weight: bold;
  padding: 4px 20px 4px 0;
}

.info-table td {
  padding: 4px 0;
}

/* ============================================ *
 * Linearize Table
 * ============================================ */
@media only screen and (max-width: 479px) {
  .linearize-table {
    /* Helpers */
  }
  .linearize-table tr,
  .linearize-table th,
  .linearize-table td {
    display: block;
  }
  .linearize-table thead th {
    border-right: 0;
    border-left: 0;
  }
  .linearize-table thead th.lin-hide {
    display: none;
  }
  .linearize-table thead th:nth-child(1n+2) {
    display: none;
  }
  .linearize-table tbody tr {
    position: relative;
    border-bottom: 1px solid var(--maho-color-border);
  }
  .linearize-table tbody td {
    padding: 0 10px 4px;
    border-right: 0;
    border-bottom: 0;
  }
  .linearize-table tbody td.lin-hide {
    display: none;
  }
  .linearize-table tbody td:first-child {
    padding-top: 10px;
  }
  .linearize-table tbody td:first-child,
  .linearize-table tbody td:first-child h3 {
    font-weight: bold;
  }
  .linearize-table tbody td[data-rwd-label] {
    text-align: left;
    padding-left: 30px;
  }
  .linearize-table tbody td[data-rwd-label]:before {
    content: attr(data-rwd-label) ":";
    font-size: 0.75rem;
    padding-right: 5px;
    text-transform: uppercase;
  }
  .linearize-table tfoot tr {
    display: block;
    text-align: right;
  }
  .linearize-table tfoot tr:after {
    content: '';
    display: table;
    clear: both;
  }
  .linearize-table tfoot td {
    display: block;
    float: left;
  }
  .linearize-table tfoot td.lin-hide {
    display: none;
  }
  .linearize-table tfoot td:nth-child(odd) {
    clear: left;
    width: 60%;
  }
  .linearize-table tfoot td:nth-child(even) {
    text-align: left;
    width: 40%;
  }
  .linearize-table .linearize-hide {
    display: none;
  }
  .linearize-table .linearize-unpad {
    padding: 0;
  }
  .linearize-table .linearize-show {
    display: block;
  }
}
@media only screen and (max-width: 599px) {
  .linearize-table-large {
    /* Helpers */
  }
  .linearize-table-large tr,
  .linearize-table-large th,
  .linearize-table-large td {
    display: block;
  }
  .linearize-table-large thead th {
    border-right: 0;
    border-left: 0;
  }
  .linearize-table-large thead th.lin-hide {
    display: none;
  }
  .linearize-table-large thead th:nth-child(1n+2) {
    display: none;
  }
  .linearize-table-large tbody tr {
    position: relative;
    border-bottom: 1px solid var(--maho-color-border);
  }
  .linearize-table-large tbody td {
    padding: 0 10px 4px;
    border-right: 0;
    border-bottom: 0;
  }
  .linearize-table-large tbody td.lin-hide {
    display: none;
  }
  .linearize-table-large tbody td:first-child {
    padding-top: 10px;
  }
  .linearize-table-large tbody td:first-child,
  .linearize-table-large tbody td:first-child h3 {
    font-weight: bold;
  }
  .linearize-table-large tbody td[data-rwd-label] {
    text-align: left;
    padding-left: 30px;
  }
  .linearize-table-large tbody td[data-rwd-label]:before {
    content: attr(data-rwd-label) ":";
    font-size: 0.75rem;
    padding-right: 5px;
    text-transform: uppercase;
  }
  .linearize-table-large tfoot tr {
    display: block;
    text-align: right;
  }
  .linearize-table-large tfoot tr:after {
    content: '';
    display: table;
    clear: both;
  }
  .linearize-table-large tfoot td {
    display: block;
    float: left;
  }
  .linearize-table-large tfoot td.lin-hide {
    display: none;
  }
  .linearize-table-large tfoot td:nth-child(odd) {
    clear: left;
    width: 60%;
  }
  .linearize-table-large tfoot td:nth-child(even) {
    text-align: left;
    width: 40%;
  }
  .linearize-table-large .linearize-hide {
    display: none;
  }
  .linearize-table-large .linearize-unpad {
    padding: 0;
  }
  .linearize-table-large .linearize-show {
    display: block;
  }
}
@media only screen and (min-width: 600px) {
  .linearize-table .linearize-collapse {
    display: none;
  }
}
/* ============================================ *
 * Global
 * ============================================ */
html,
body {
  height: 100%;
}

.wrapper {
  min-width: 320px;
  min-height: 100%;
  margin: 0 auto;
  background: var(--maho-color-background);
}

.wrapper:after {
  content: '';
  display: table;
  clear: both;
}

/* ============================================ *
 * Header
 * ============================================ */

.page-header-container {display: flex; place-items: center; gap: 0.5rem;padding-top:0.5rem}
.page-header-container > div {display: flex; place-items: center; gap: 0.5rem}
.page-header-container > div:first-of-type > a:first-of-type {display: none}
.currency-switcher label, .form-language label {display: none}

@media (max-width: 770px) {
  .page-header-container > div:first-of-type a:first-of-type {display: block}
  .page-header-container > *:nth-child(1) {grid-area: logo}
  .page-header-container > *:nth-child(2) {grid-area: search; width: 100%}
  .page-header-container > *:nth-child(3) {grid-area: links}
  .main-container {margin-top: 0.5rem}
  .page-header-container {
    display: grid !important;
    place-items: normal !important;
    grid-template-columns: auto min-content;
    grid-template-areas:
                "logo links"
                "search search";
    margin-inline: 0.5rem;
  }
}

@media only screen and (min-width: 771px) {
  .page-header {
    max-width: 1260px;
    margin: 0 auto;
    padding: 0 30px;
  }
}

/* ============================================ *
 * Logo
 * ============================================ */

.logo img {
  width: 100%;
  height: auto;
}

.logo:hover {
  opacity: 0.8;
}

@media (max-width: 770px) {
  .logo img {max-height: 50px}
}
/* ... */

